--- a/training/fine-tune-llms-in-2024-with-trl.ipynb
+++ b/training/fine-tune-llms-in-2024-with-trl.ipynb
@@ -50,23 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip uninstall -y trl\n",
-    "!pip install git+https://github.com/philschmid/trl@patch-1 --upgrade"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Install Pytorch & other libraries\n",
     "!pip install \"torch==2.1.2\" tensorboard\n",
     "\n",
@@ -80,8 +63,7 @@
     "  \"trl==0.7.10\" # \\\n",
     "  # \"peft==0.7.1\" \\\n",
     "\n",
-    "# install trl from github\n",
-    "# !pip install git+https://github.com/huggingface/peft.git\n",
+    "# install peft from github\n",
     "!pip install git+https://github.com/huggingface/peft@62237dc9b1e460825462d6b1e7b0cf3418cec357 --upgrade"
    ]
   },
@@ -238,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +237,7 @@
     "Next, we will load our LLM. For our use case we are going to use CodeLlama 7B. CodeLlama is a Llama model trained for general code synthesis and understanding. \n",
     "But we can easily swap out the model for another model, e.g. [Mistral](https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2) or [Mixtral](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) models, TII [Falcon](https://huggingface.co/tiiuae/falcon-40b), or any other LLMs by changing our `model_id` variable. We will use bitsandbytes to quantize our model to 4-bit.\n",
     "\n",
-    "_Note: Be aware the bigger the model the more memory it will require. In our example we will use the 7B version, which can be tuned on 24GB GPUs. If you have a smaller GPU._\n",
-    "\n",
-    "Correctly, preparing the LLM and Tokenizer for training chat/conversational models is crucial. We need to add new special tokens to the tokenizer and model and teach to understand the different roles in a conversation. In `trl` we have a convinient method called [setup_chat_format](https://huggingface.co/docs/trl/main/en/sft_trainer#add-special-tokens-for-chat-format), which:\n",
-    "* Adds special tokens to the tokenizer, e.g. `<|im_start|>` and `<|im_end|>`, to indicate the start and end of a conversation.\n",
-    "* Resizes the model’s embedding layer to accommodate the new tokens.\n",
-    "* Sets the `chat_template` of the tokenizer, which is used to format the input data into a chat-like format. The default is `chatml` from OpenAI."
+    "_Note: Be aware the bigger the model the more memory it will require. In our example we will use the 7B version, which can be tuned on 24GB GPUs. If you have a smaller GPU._"
    ]
   },
   {
@@ -291,9 +268,11 @@
     ")\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.padding_side = 'right' # to prevent warnings\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
-    "# set chat template to OAI chatML, remove if you start from a fine-tuned model\n",
-    "model, tokenizer = setup_chat_format(model, tokenizer)"
+    "# # set chat template to OAI chatML, remove if you start from a fine-tuned model\n",
+    "# NOTE: Not yet supported with PEFT & LORA\n",
+    "# model, tokenizer = setup_chat_format(model, tokenizer)"
    ]
   },
   {
@@ -306,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +320,7 @@
     "\n",
     "args = TrainingArguments(\n",
     "    output_dir=\"code-llama-7b-text-to-sql\", # directory to save and repository id\n",
-    "    num_train_epochs=2,                     # number of training epochs\n",
+    "    num_train_epochs=3,                     # number of training epochs\n",
     "    per_device_train_batch_size=3,          # batch size per device during training\n",
     "    gradient_accumulation_steps=2,          # number of steps before performing a backward/update pass\n",
     "    gradient_checkpointing=True,            # use gradient checkpointing to save memory\n",
@@ -354,7 +333,7 @@
     "    max_grad_norm=0.3,                      # max gradient norm based on QLoRA paper\n",
     "    warmup_ratio=0.03,                      # warmup ratio based on QLoRA paper\n",
     "    lr_scheduler_type=\"constant\",           # use constant learning rate scheduler\n",
-    "    push_to_hub=False,                       # push model to hub\n",
+    "    push_to_hub=True,                       # push model to hub\n",
     "    report_to=\"tensorboard\",                # report metrics to tensorboard\n",
     ")"
    ]
@@ -417,12 +396,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 02:08:00 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of `2.6$`."
+    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 01:29:58 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of only `1.8$`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,24 +429,25 @@
    "outputs": [],
    "source": [
     "\n",
-    "from peft import PeftModel, PeftConfig\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
-    "from peft import AutoPeftModelForCausalLM\n",
+    "#### COMMENT IN TO MERGE PEFT AND BASE MODEL ####\n",
+    "# from peft import PeftModel, PeftConfig\n",
+    "# from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "# from peft import AutoPeftModelForCausalLM\n",
     "\n",
-    "# Load PEFT model on CPU\n",
-    "config = PeftConfig.from_pretrained(args.output_dir)\n",
-    "model = AutoModelForCausalLM.from_pretrained(config.base_model_name_or_path,low_cpu_mem_usage=True)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(args.output_dir)\n",
-    "model.resize_token_embeddings(len(tokenizer))\n",
-    "model = PeftModel.from_pretrained(model, args.output_dir)\n",
-    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "    args.output_dir,\n",
-    "    torch_dtype=torch.float16,\n",
-    "    low_cpu_mem_usage=True,\n",
-    ")  \n",
-    "# Merge LoRA and base model and save\n",
-    "merged_model = model.merge_and_unload()\n",
-    "merged_model.save_pretrained(args.output_dir,safe_serialization=True, max_shard_size=\"2GB\")"
+    "# # Load PEFT model on CPU\n",
+    "# config = PeftConfig.from_pretrained(args.output_dir)\n",
+    "# model = AutoModelForCausalLM.from_pretrained(config.base_model_name_or_path,low_cpu_mem_usage=True)\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(args.output_dir)\n",
+    "# model.resize_token_embeddings(len(tokenizer))\n",
+    "# model = PeftModel.from_pretrained(model, args.output_dir)\n",
+    "# model = AutoPeftModelForCausalLM.from_pretrained(\n",
+    "#     args.output_dir,\n",
+    "#     torch_dtype=torch.float16,\n",
+    "#     low_cpu_mem_usage=True,\n",
+    "# )  \n",
+    "# # Merge LoRA and base model and save\n",
+    "# merged_model = model.merge_and_unload()\n",
+    "# merged_model.save_pretrained(args.output_dir,safe_serialization=True, max_shard_size=\"2GB\")"
    ]
   },
   {
@@ -485,15 +465,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55459ce2cbd74c00b7a6b2845d5f8ace",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The model 'PeftModelForCausalLM' is not supported for text-generation. Supported models are ['BartForCausalLM', 'BertLMHeadModel', 'BertGenerationDecoder', 'BigBirdForCausalLM', 'BigBirdPegasusForCausalLM', 'BioGptForCausalLM', 'BlenderbotForCausalLM', 'BlenderbotSmallForCausalLM', 'BloomForCausalLM', 'CamembertForCausalLM', 'LlamaForCausalLM', 'CodeGenForCausalLM', 'CpmAntForCausalLM', 'CTRLLMHeadModel', 'Data2VecTextForCausalLM', 'ElectraForCausalLM', 'ErnieForCausalLM', 'FalconForCausalLM', 'FuyuForCausalLM', 'GitForCausalLM', 'GPT2LMHeadModel', 'GPT2LMHeadModel', 'GPTBigCodeForCausalLM', 'GPTNeoForCausalLM', 'GPTNeoXForCausalLM', 'GPTNeoXJapaneseForCausalLM', 'GPTJForCausalLM', 'LlamaForCausalLM', 'MarianForCausalLM', 'MBartForCausalLM', 'MegaForCausalLM', 'MegatronBertForCausalLM', 'MistralForCausalLM', 'MixtralForCausalLM', 'MptForCausalLM', 'MusicgenForCausalLM', 'MvpForCausalLM', 'OpenLlamaForCausalLM', 'OpenAIGPTLMHeadModel', 'OPTForCausalLM', 'PegasusForCausalLM', 'PersimmonForCausalLM', 'PhiForCausalLM', 'PLBartForCausalLM', 'ProphetNetForCausalLM', 'QDQBertLMHeadModel', 'ReformerModelWithLMHead', 'RemBertForCausalLM', 'RobertaForCausalLM', 'RobertaPreLayerNormForCausalLM', 'RoCBertForCausalLM', 'RoFormerForCausalLM', 'RwkvForCausalLM', 'Speech2Text2ForCausalLM', 'TransfoXLLMHeadModel', 'TrOCRForCausalLM', 'WhisperForCausalLM', 'XGLMForCausalLM', 'XLMWithLMHeadModel', 'XLMProphetNetForCausalLM', 'XLMRobertaForCausalLM', 'XLMRobertaXLForCausalLM', 'XLNetLMHeadModel', 'XmodForCausalLM'].\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from peft import PeftModel, PeftConfig\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline \n",
     "\n",
-    "peft_model_id = \"/fsx/philipp/deep-learning-pytorch-huggingface/training/code-llama-7b-text-to-sql\"\n",
+    "peft_model_id = \"./code-llama-7b-text-to-sql\"\n",
     "# peft_model_id = args.output_dir\n",
     "\n",
     "# Load Model with PEFT adapter\n",
@@ -552,34 +554,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [23:08<00:00,  1.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 79.50%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "success_rate = []\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "def evaluate(sample):\n",
-    "    messages = [\n",
-    "        {\"role\": \"system\", \"content\": system_message.format(schema=sample[\"context\"])},\n",
-    "        {\"role\": \"user\", \"content\":sample[\"question\"]},                \n",
-    "    ]\n",
-    "    # Test on sample \n",
-    "    prompt = pipe.tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=True)\n",
-    "    outputs = pipe(prompt, max_new_tokens=256, do_sample=True, temperature=0.7, top_k=50, top_p=0.95)\n",
+    "    prompt = pipe.tokenizer.apply_chat_template(sample[\"messages\"][:2], tokenize=False, add_generation_prompt=True)\n",
+    "    outputs = pipe(prompt, max_new_tokens=256, do_sample=True, temperature=0.7, top_k=50, top_p=0.95, eos_token_id=pipe.tokenizer.eos_token_id, pad_token_id=pipe.tokenizer.pad_token_id)\n",
     "    predicted_answer = outputs[0]['generated_text'][len(prompt):].strip()\n",
-    "    if predicted_answer == sample[\"answer\"]:\n",
-    "        success_rate.append(1)\n",
+    "    if predicted_answer == sample[\"messages\"][2][\"content\"]:\n",
+    "        return 1 \n",
     "    else:\n",
-    "        success_rate.append(0)\n",
+    "        return 0\n",
     "\n",
+    "success_rate = []\n",
+    "number_of_eval_samples = 1000\n",
     "# iterate over eval dataset and predict\n",
-    "eval_res = eval_dataset.map(evaluate)  \n",
+    "for s in tqdm(eval_dataset.shuffle().select(range(number_of_eval_samples))):\n",
+    "    success_rate.append(evaluate(s))\n",
     "\n",
     "# compute accuracy\n",
     "accuracy = sum(success_rate)/len(success_rate)\n",
     "\n",
-    "print(f\"Accuracy: {accuracy:.2f}\")  \n",
+    "print(f\"Accuracy: {accuracy*100:.2f}%\")  \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We evaluated our model on 1000 samples from the evaluation dataset and got an accuracy of 79.50%, which took ~25 minutes. \n",
+    "This is quite good, but as mentioned you need to take this metric with a grain of salt. It would be better if we could evaluate our model by running the qureies against a real database and compare the results. Since there might be different \"correct\" SQL queries for the same instruction. There are also several ways on how we could improve the performance by using few-shot learning, using RAG, Self-healing to generate the SQL query."
    ]
   },
   {
@@ -588,11 +619,15 @@
    "source": [
     "## 6. Deploy the LLM for Production\n",
     "\n",
-    "You can now deploy your model to production. For deploying open LLMs into production we recommend using Text Generation Inference...\n",
+    "You can now deploy your model to production. For deploying open LLMs into production we recommend using [Text Generation Inference (TGI)](https://github.com/huggingface/text-generation-inference). TGI is a purpose-built solution for deploying and serving Large Language Models (LLMs). TGI enables high-performance text generation using Tensor Parallelism and continous batching for the most popular open LLMs, including Llama, Mistral, Mixtral, StarCoder, T5 and more. Text Generation Inference is used by companies as IBM, Grammarly, Uber, Deutsche Telekom, and many more. There are several ways to deploy your model, including:\n",
     "\n",
+    " * [Deploy LLMs with Hugging Face Inference Endpoints](https://huggingface.co/blog/inference-endpoints-llm)\n",
+    " * [Hugging Face LLM Inference Container for Amazon SageMaker](https://huggingface.co/blog/sagemaker-huggingface-llm)\n",
+    " * DIY\n",
     "\n",
+    "If you have docker installed you can use the following command to start the inference server. \n",
     "\n",
-    " There are several ways to deploy your model, including:"
+    "_Note: Make sure that you have enough GPU memory to run the container. Restart kernel to remove all allocated GPU memory from the notebook._ "
    ]
   },
   {
@@ -600,6 +635,99 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "%%bash \n",
+    "# model=$PWD/{args.output_dir} # path to model\n",
+    "model=$(pwd)/code-llama-7b-text-to-sql # path to model\n",
+    "num_shard=1             # number of shards\n",
+    "max_input_length=1024   # max input length\n",
+    "max_total_tokens=2048   # max total tokens\n",
+    "\n",
+    "docker run -d --name tgi --gpus all -ti -p 8080:80 \\\n",
+    "  -e MODEL_ID=/workspace \\\n",
+    "  -e NUM_SHARD=$num_shard \\\n",
+    "  -e MAX_INPUT_LENGTH=$max_input_length \\\n",
+    "  -e MAX_TOTAL_TOKENS=$max_total_tokens \\\n",
+    "  -v $model:/workspace \\\n",
+    "  ghcr.io/huggingface/text-generation-inference:latest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once your container is running you can send requests. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query:\n",
+      "when was the death of the person with husband Charles, 1st dauphin?\n",
+      "Original Answer:\n",
+      "SELECT death FROM table_name_1 WHERE husband = \"charles, 1st dauphin\"\n",
+      "Generated Answer:\n",
+      "SELECT death FROM table_name_1 WHERE husband = \"charles, 1st dauphin\"\n",
+      "Latency per token: 31ms\n",
+      "Latency prompt encoding: 94ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests as r \n",
+    "from transformers import AutoTokenizer\n",
+    "from datasets import load_dataset\n",
+    "from random import randint\n",
+    "\n",
+    "# Load our test dataset and Tokenizer again\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"code-llama-7b-text-to-sql\")\n",
+    "eval_dataset = load_dataset(\"json\", data_files=\"test_dataset.json\", split=\"train\")\n",
+    "rand_idx = randint(0, len(eval_dataset))\n",
+    "\n",
+    "# generate the same prompt as for the first local test\n",
+    "prompt = tokenizer.apply_chat_template(eval_dataset[rand_idx][\"messages\"][:2], tokenize=False, add_generation_prompt=True)\n",
+    "request= {\"inputs\":prompt,\"parameters\":{\"temperature\":0.2, \"top_p\": 0.95, \"max_new_tokens\": 256}}\n",
+    "\n",
+    "# send request to inference server\n",
+    "resp = r.post(\"http://127.0.0.1:8080/generate\", json=request)\n",
+    "\n",
+    "output = resp.json()[\"generated_text\"].strip()\n",
+    "time_per_token = resp.headers.get(\"x-time-per-token\")\n",
+    "time_prompt_tokens = resp.headers.get(\"x-prompt-tokens\")\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"Query:\\n{eval_dataset[rand_idx]['messages'][1]['content']}\")\n",
+    "print(f\"Original Answer:\\n{eval_dataset[rand_idx]['messages'][2]['content']}\")\n",
+    "print(f\"Generated Answer:\\n{output}\")\n",
+    "print(f\"Latency per token: {time_per_token}ms\")\n",
+    "print(f\"Latency prompt encoding: {time_prompt_tokens}ms\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Awesome, Don't forget to stop your container once you are done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker stop tgi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
