--- a/training/fine-tune-llms-in-2024-with-trl.ipynb
+++ b/training/fine-tune-llms-in-2024-with-trl.ipynb
@@ -60,11 +60,12 @@
     "  \"accelerate==0.26.1\" \\\n",
     "  \"evaluate==0.4.1\" \\\n",
     "  \"bitsandbytes==0.42.0\" \\\n",
-    "  \"trl==0.7.10\" # \\\n",
+    "  # \"trl==0.7.10\" # \\\n",
     "  # \"peft==0.7.1\" \\\n",
     "\n",
-    "# install peft from github\n",
-    "!pip install git+https://github.com/huggingface/peft@62237dc9b1e460825462d6b1e7b0cf3418cec357 --upgrade"
+    "# install peft & trl from github\n",
+    "!pip install git+https://github.com/huggingface/trl@a3c5b7178ac4f65569975efadc97db2f3749c65e --upgrade\n",
+    "!pip install git+https://github.com/huggingface/peft@4a1559582281fc3c9283892caea8ccef1d6f5a4f--upgrade"
    ]
   },
   {
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,13 @@
     "Next, we will load our LLM. For our use case we are going to use CodeLlama 7B. CodeLlama is a Llama model trained for general code synthesis and understanding. \n",
     "But we can easily swap out the model for another model, e.g. [Mistral](https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2) or [Mixtral](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) models, TII [Falcon](https://huggingface.co/tiiuae/falcon-40b), or any other LLMs by changing our `model_id` variable. We will use bitsandbytes to quantize our model to 4-bit.\n",
     "\n",
-    "_Note: Be aware the bigger the model the more memory it will require. In our example we will use the 7B version, which can be tuned on 24GB GPUs. If you have a smaller GPU._"
+    "_Note: Be aware the bigger the model the more memory it will require. In our example we will use the 7B version, which can be tuned on 24GB GPUs. If you have a smaller GPU._\n",
+    "\n",
+    "\n",
+    "Correctly, preparing the LLM and Tokenizer for training chat/conversational models is crucial. We need to add new special tokens to the tokenizer and model and teach to understand the different roles in a conversation. In `trl` we have a convinient method called [setup_chat_format](https://huggingface.co/docs/trl/main/en/sft_trainer#add-special-tokens-for-chat-format), which:\n",
+    "* Adds special tokens to the tokenizer, e.g. `<|im_start|>` and `<|im_end|>`, to indicate the start and end of a conversation.\n",
+    "* Resizes the model’s embedding layer to accommodate the new tokens.\n",
+    "* Sets the `chat_template` of the tokenizer, which is used to format the input data into a chat-like format. The default is `chatml` from OpenAI."
    ]
   },
   {
@@ -268,11 +275,9 @@
     ")\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
     "tokenizer.padding_side = 'right' # to prevent warnings\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
     "\n",
     "# # set chat template to OAI chatML, remove if you start from a fine-tuned model\n",
-    "# NOTE: Not yet supported with PEFT & LORA\n",
-    "# model, tokenizer = setup_chat_format(model, tokenizer)"
+    "model, tokenizer = setup_chat_format(model, tokenizer)"
    ]
   },
   {
@@ -285,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,49 +470,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55459ce2cbd74c00b7a6b2845d5f8ace",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The model 'PeftModelForCausalLM' is not supported for text-generation. Supported models are ['BartForCausalLM', 'BertLMHeadModel', 'BertGenerationDecoder', 'BigBirdForCausalLM', 'BigBirdPegasusForCausalLM', 'BioGptForCausalLM', 'BlenderbotForCausalLM', 'BlenderbotSmallForCausalLM', 'BloomForCausalLM', 'CamembertForCausalLM', 'LlamaForCausalLM', 'CodeGenForCausalLM', 'CpmAntForCausalLM', 'CTRLLMHeadModel', 'Data2VecTextForCausalLM', 'ElectraForCausalLM', 'ErnieForCausalLM', 'FalconForCausalLM', 'FuyuForCausalLM', 'GitForCausalLM', 'GPT2LMHeadModel', 'GPT2LMHeadModel', 'GPTBigCodeForCausalLM', 'GPTNeoForCausalLM', 'GPTNeoXForCausalLM', 'GPTNeoXJapaneseForCausalLM', 'GPTJForCausalLM', 'LlamaForCausalLM', 'MarianForCausalLM', 'MBartForCausalLM', 'MegaForCausalLM', 'MegatronBertForCausalLM', 'MistralForCausalLM', 'MixtralForCausalLM', 'MptForCausalLM', 'MusicgenForCausalLM', 'MvpForCausalLM', 'OpenLlamaForCausalLM', 'OpenAIGPTLMHeadModel', 'OPTForCausalLM', 'PegasusForCausalLM', 'PersimmonForCausalLM', 'PhiForCausalLM', 'PLBartForCausalLM', 'ProphetNetForCausalLM', 'QDQBertLMHeadModel', 'ReformerModelWithLMHead', 'RemBertForCausalLM', 'RobertaForCausalLM', 'RobertaPreLayerNormForCausalLM', 'RoCBertForCausalLM', 'RoFormerForCausalLM', 'RwkvForCausalLM', 'Speech2Text2ForCausalLM', 'TransfoXLLMHeadModel', 'TrOCRForCausalLM', 'WhisperForCausalLM', 'XGLMForCausalLM', 'XLMWithLMHeadModel', 'XLMProphetNetForCausalLM', 'XLMRobertaForCausalLM', 'XLMRobertaXLForCausalLM', 'XLNetLMHeadModel', 'XmodForCausalLM'].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
-    "from peft import PeftModel, PeftConfig\n",
-    "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline \n",
+    "from peft import AutoPeftModelForCausalLM\n",
+    "from transformers import AutoTokenizer, pipeline \n",
     "\n",
     "peft_model_id = \"./code-llama-7b-text-to-sql\"\n",
     "# peft_model_id = args.output_dir\n",
     "\n",
     "# Load Model with PEFT adapter\n",
-    "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)\n",
-    "config = PeftConfig.from_pretrained(peft_model_id)\n",
-    "model = AutoModelForCausalLM.from_pretrained(\n",
-    "  config.base_model_name_or_path,\n",
+    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
+    "  peft_model_id,\n",
     "  device_map=\"auto\",\n",
     "  torch_dtype=torch.float16\n",
     ")\n",
-    "model.resize_token_embeddings(len(tokenizer))\n",
-    "model = PeftModel.from_pretrained(model, peft_model_id)\n",
     "# load into pipeline\n",
     "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
    ]
@@ -536,7 +515,7 @@
     "\n",
     "# Test on sample \n",
     "prompt = pipe.tokenizer.apply_chat_template(eval_dataset[rand_idx][\"messages\"][:2], tokenize=False, add_generation_prompt=True)\n",
-    "outputs = pipe(prompt, max_new_tokens=256, do_sample=False, temperature=0.1, top_k=50, top_p=0.1)\n",
+    "outputs = pipe(prompt, max_new_tokens=256, do_sample=False, temperature=0.1, top_k=50, top_p=0.1, eos_token_id=pipe.tokenizer.eos_token_id, pad_token_id=pipe.tokenizer.pad_token_id)\n",
     "\n",
     "print(f\"Query:\\n{eval_dataset[rand_idx]['messages'][1]['content']}\")\n",
     "print(f\"Original Answer:\\n{eval_dataset[rand_idx]['messages'][2]['content']}\")\n",
@@ -554,31 +533,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [23:08<00:00,  1.39s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 79.50%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "\n",
@@ -661,24 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query:\n",
-      "when was the death of the person with husband Charles, 1st dauphin?\n",
-      "Original Answer:\n",
-      "SELECT death FROM table_name_1 WHERE husband = \"charles, 1st dauphin\"\n",
-      "Generated Answer:\n",
-      "SELECT death FROM table_name_1 WHERE husband = \"charles, 1st dauphin\"\n",
-      "Latency per token: 31ms\n",
-      "Latency prompt encoding: 94ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests as r \n",
     "from transformers import AutoTokenizer\n",
