Fixed some issue with current version

--- a/training/fine-tune-llms-in-2024-with-trl.ipynb
+++ b/training/fine-tune-llms-in-2024-with-trl.ipynb
@@ -60,12 +60,8 @@
     "  \"accelerate==0.26.1\" \\\n",
     "  \"evaluate==0.4.1\" \\\n",
     "  \"bitsandbytes==0.42.0\" \\\n",
-    "  # \"trl==0.7.10\" # \\\n",
-    "  # \"peft==0.7.1\" \\\n",
-    "\n",
-    "# install peft & trl from github\n",
-    "!pip install git+https://github.com/huggingface/trl@a3c5b7178ac4f65569975efadc97db2f3749c65e --upgrade\n",
-    "!pip install git+https://github.com/huggingface/peft@4a1559582281fc3c9283892caea8ccef1d6f5a4f--upgrade"
+    "  \"trl==0.7.10\" # \\\n",
+    "  \"peft==0.7.1\" \\"
    ]
   },
   {
@@ -262,7 +258,10 @@
     "\n",
     "# BitsAndBytesConfig int-4 config\n",
     "bnb_config = BitsAndBytesConfig(\n",
-    "    load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.bfloat16\n",
+    "    load_in_4bit=True, \n",
+    "    bnb_4bit_use_double_quant=True, \n",
+    "    bnb_4bit_quant_type=\"nf4\", \n",
+    "    bnb_4bit_compute_dtype=torch.bfloat16\n",
     ")\n",
     "\n",
     "# Load model and tokenizer\n",
@@ -294,6 +293,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# In the next version Lora you can use \"all-linear\"\n",
+    "# Here Get all linear for target modules\n",
+    "def find_all_linear_names(model):\n",
+    "    cls = bnb.nn.Linear4bit  # (default:torch.nn.Linear,4bit:bnb.nn.Linear4bit,8bit:bnb.nn.Linear8bitLt)\n",
+    "    lora_module_names = set()\n",
+    "    for name, module in model.named_modules():\n",
+    "        if isinstance(module, cls):\n",
+    "            names = name.split('.')\n",
+    "            lora_module_names.add(names[0] if len(names) == 1 else names[-1])\n",
+    "\n",
+    "\n",
+    "    if 'lm_head' in lora_module_names: # needed for 16-bit\n",
+    "        lora_module_names.remove('lm_head')\n",
+    "    return list(lora_module_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from peft import LoraConfig\n",
     "\n",
     "# LoRA config based on QLoRA paper & Sebastian Raschka experiment\n",
@@ -302,7 +323,7 @@
     "        lora_dropout=0.05,\n",
     "        r=256,\n",
     "        bias=\"none\",\n",
-    "        target_modules=\"all-linear\",\n",
+    "        target_modules=find_all_linear_names(model),\n",
     "        task_type=\"CAUSAL_LM\", \n",
     ")"
    ]
@@ -338,6 +359,7 @@
     "    max_grad_norm=0.3,                      # max gradient norm based on QLoRA paper\n",
     "    warmup_ratio=0.03,                      # warmup ratio based on QLoRA paper\n",
     "    lr_scheduler_type=\"constant\",           # use constant learning rate scheduler\n",
+    "    group_by_length=True,                   # Group sequences into batches with same length (Saves memory and speeds up training)\n",
     "    push_to_hub=True,                       # push model to hub\n",
     "    report_to=\"tensorboard\",                # report metrics to tensorboard\n",
     ")"
@@ -475,20 +497,38 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from peft import AutoPeftModelForCausalLM\n",
-    "from transformers import AutoTokenizer, pipeline \n",
+    "from transformers import AutoTokenizer, pipeline, AutoModelForCausalLM\n",
     "\n",
     "peft_model_id = \"./code-llama-7b-text-to-sql\"\n",
     "# peft_model_id = args.output_dir\n",
     "\n",
-    "# Load Model with PEFT adapter\n",
-    "model = AutoPeftModelForCausalLM.from_pretrained(\n",
-    "  peft_model_id,\n",
+    "# Load Perf Config and tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)\n",
+    "config = PeftConfig.from_pretrained(peft_model_id)\n",
+    "\n",
+    "# Load Model with Base model\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "  config.base_model_name_or_path,\n",
     "  device_map=\"auto\",\n",
     "  torch_dtype=torch.float16\n",
     ")\n",
+    "\n",
+    "model.resize_token_embeddings(len(tokenizer))\n",
+    "model = PeftModel.from_pretrained(model, peft_model_id)\n",
     "# load into pipeline\n",
-    "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
+    "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)\n",
+    "\n",
+    "\n",
+    "# Note in the next version your can:\n",
+    "# from peft import AutoPeftModelForCausalLM\n",
+    "#\n",
+    "# Load Model with PEFT adapter\n",
+    "# model = AutoPeftModelForCausalLM.from_pretrained(\n",
+    "#  peft_model_id,\n",
+    "#  device_map=\"auto\",\n",
+    "#  torch_dtype=torch.float16\n",
+    "# )\n",
+    "# pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
    ]
   },
   {
