--- a/training/fine-tune-llms-in-2024-with-trl.ipynb
+++ b/training/fine-tune-llms-in-2024-with-trl.ipynb
@@ -480,6 +480,7 @@
     "  device_map=\"auto\",\n",
     "  torch_dtype=torch.float16\n",
     ")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(peft_model_id)\n",
     "# load into pipeline\n",
     "pipe = pipeline(\"text-generation\", model=model, tokenizer=tokenizer)"
    ]
